<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"



        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" ESTO ES UN INTENTO DE AGENDA TELEFONICA =) "
            android:textColor="@color/material_deep_teal_200"
            android:textSize="40px"
            android:textAlignment="gravity"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_ident"
            android:hint="@string/Et_ident"
            android:inputType="number"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_nombre"
            android:hint="@string/Et_Nombre"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_apellidos"
            android:hint="@string/Et_Apellidos"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_direccion"
            android:hint="@string/Et_Direccion"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_telefono"
            android:hint="@string/Et_Telefono"
            android:inputType="number"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Boton1"
                android:text="@string/boton1"
                android:onClick="Guardar"
                android:layout_weight="1"
                android:drawablePadding="16dp"


                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Boton2"
                android:text="@string/boton2"
                android:onClick="Consulta"
                android:layout_weight="1"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Boton3"
                android:text="@string/boton3"
                android:onClick="Baja"
                android:layout_weight="1"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Boton4"
                android:text="@string/boton4"
                android:onClick="Modificar"
                android:layout_weight="1"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton5"
                android:id="@+id/Boton5"
                android:onClick="Limpiar"
                android:layout_weight="1"
                />



        </LinearLayout>
    </LinearLayout>



</ScrollView>
